# trajectory-generation

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launch/: env.sh~  stream_flip.launch~  stream_flip_distributed.launch~  traj.launch  traj.launch~  trajGazebo.launch  traj_gdb.launch
msg/: FlightCmd.msg
src/: flighControl.cpp~  flightControl.cpp  flightControl.cpp~  test1.cpp  test1.cpp~  test1Fly.cpp  test1Fly.cpp~  trajGeneration.cpp
